# version11

./: .dockerignore  .env.bak  .env.example  .gitignore  .z-ai-config  3000  CONTEXT_COMPRESSION.md  Dockerfile  Dockerfile.s6  GLM4.7-FLASH-CONFIG.md  Makefile  README.md  SERVER_CONFIGURATION.md  analyze-images.ts  bun.lock.bak  check-db.ts  check-image.ts  context-compressed.md  docker-compose.dev.yml  docker-compose.s6.yml  docker-compose.yml  docker-entrypoint.sh  ecosystem.config.js  ecosystem.config.prod.js  fix-and-start.ps1  next.config.ts  package-lock.json  package.json  package.json.bak  pytest.ini  start-all.sh  start-gelani.bat  start-gelani.ps1  start-services.ts  stop-all.sh  stop-gelani.bat  tsconfig.json  vercel.json
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  GELANI_ARCHITECTURE.md  GELANI_STATE.md  P1_ARCHITECTURE_REVIEW.md  S6_OVERLAY.md
mini-services/: Dockerfile.stub  (+13 more)
mini-services/langchain-rag-service/: .gitignore  Dockerfile  index.py  index_full.py  package.json  pyproject.toml  requirements.txt  requirements_full.txt  start.sh  start_full.sh
mini-services/langchain-rag-service/app/: __init__.py  main.py
mini-services/langchain-rag-service/app/api/: health.py
mini-services/langchain-rag-service/app/core/: config.py  pinecone_config.py
mini-services/langchain-rag-service/app/embedding/: embedding_pipeline.py
mini-services/langchain-rag-service/app/llm/: zai_llm.py
mini-services/langchain-rag-service/app/retrieval/: rag_engine.py
mini-services/langchain-rag-service/app/sync/: __init__.py  enhanced_sync.py  smart_sync.py
(+360 files in other folders)
